implemented delete endpoint
