# docs/swagger.json
@@ -11,7 +11,7 @@
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "1.1.0"
+        "version": "1.2.0"
     },
     "paths": {
         "/c": {
@@ -59,6 +59,17 @@
                     "c"
                 ],
                 "summary": "Create a new Curt",
+                "parameters": [
+                    {
+                        "description": "Curt Data",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Body"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -102,6 +113,44 @@
                 "responses": {
                     "301": {
                         "description": "Moved Permanently"
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "c"
+                ],
+                "summary": "Delete a Curt",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Curt Key",
+                        "name": "key",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Curt"
+                        }
                     },
                     "404": {
                         "description": "Not Found",
@@ -183,6 +232,20 @@
         }
     },
     "definitions": {
+        "models.Body": {
+            "type": "object",
+            "required": [
+                "url"
+            ],
+            "properties": {
+                "TTL": {
+                    "type": "integer"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Curt": {
             "type": "object",
             "properties": {
